# Math-Solver

./: pyproject.toml  requirements.txt
src/: app.py  demo.ipynb  main.py
src/agents/: calculator_agent.py  resoning_agent.py  wikipedia_agent.py
src/config/: constant.py  prompts.py
src/models/: openai_model.py
src/team/: math_team.py
src/tools/: wikipedia_tool.py
