[project]
name = "autogen-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.6.4",
    "autogen-core>=0.6.4",
    "autogen-ext[openai]>=0.6.4",
    "dotenv>=0.9.9",
    "langchain-community>=0.3.27",
    "streamlit>=1.46.1",
]
